# rust_password_manager

./: .gitignore  Cargo.toml  README.md  keys.db.encrypt
.github/workflows/: labels.yml  rust.yml
src/: config.rs  lib.rs  main.rs
src/app/: actions.rs  mod.rs  state.rs  ui.rs
src/app/actions/: actions.rs  confirmation_actions.rs  editing_actions.rs  mod.rs  normal_actions.rs
src/crypto/: utils.rs
src/inputs/: key.rs
src/io/: handler.rs  mod.rs
src/models/: key.rs  mod.rs  password.rs
src/repository/: keys.rs  mod.rs
