[package]
name = "rust_password_manager"
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
log = "0.4"
# tui = { package = "ratatui"}
# tui = { package = "ratatui", version = "0.21.0", features = ["all-widgets"]}
ratatui = { version = "0.21.0", features = ["all-widgets"]}
crossterm = "0.26.1"
tokio = { version = "1", features = ["full"] }
eyre = "0.6.8"
# tui-logger = { version = "0.9.2", features = ["ratatui-support"], default_features = false, optional = true }
tui-logger = { version = "0.9.2", features = ["ratatui-support"], default_features = false}
rusqlite = { version = "0.29.0", features =["bundled", "chrono", "serde_json", "uuid"]}
passwords = "3.1.13"
chrono = "0.4.26"
arboard = "3.2.0"
uuid = {version = "1.3.3", features = ["serde", "v4"]}
rand = "0.8"
chacha20poly1305 = { version = "0.10.1", features = ["stream"] }
anyhow = "1.0"
pbkdf2 ={ version = "0.12.1", features = ["simple"] }
sha2 = "0.10.6"
